fixed alignment on all files made mobile only have one video per line removed jquery mobile footers

--- a/css/base.css
+++ b/css/base.css
@@ -19,8 +19,6 @@ main {
 }
 
 header {
-  display: flex;
-  justify-content: space-between;
   margin-bottom: 1%;
   margin-left: 10%;
   margin-right: 2%;
