--- a/css/layout.css
+++ b/css/layout.css
@@ -12,14 +12,29 @@ nav {
   border-radius: calc(7px);
 }
 .profile-box {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+display: inline-block;
+}
+.search-form {
+  display: inline-block;
+  height: 44px;
+}
+#auth-ops {
+  display: inline-block;
+  height: 22px;
+}
+.settings {
+  display: inline-block;
+  height: 22px;
+}
+.about {
+  display: inline-block;
+  width: 100%;
+  height: 22px;
 }
 .settings-page {
   display: none;
 }
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 800px) {
   .video-cover {
     position: relative;
     min-width: 100%;
