--- a/css/module.css
+++ b/css/module.css
@@ -12,7 +12,7 @@
 .logo {
   border: none;
   width: 20%;
-  min-width: 200px;
+  min-width: 100px;
 }
 
 /*video grid css*/
@@ -21,7 +21,7 @@
   display: flex;
   flex-flow: wrap;
   flex-wrap: wrap-reverse;
-  margin-left: 5%;
+  margin-left: 2.5%;
   width: 90%;
   border: 5px solid white;
 }
@@ -48,4 +48,12 @@
 
 .about-page {
   display: none;
+}
+
+@media only screen and (max-width: 800px) {
+  .videos {
+    display: block;
+    width: 90%;
+    border: 5px solid white;
+  }
 }
